# librga

./: README.md  meson.build  meson_options.txt
.github/workflows/: Dockerfile  build_and_release.yml
debian/: librga2.install  rules
